// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`INJECT DEVELOPMENT should handle references classnames 1`] = `
Array [
  "hover:border-top-color__RED",
  ".hover\\\\:border-top-color__RED:hover {
  border-top-color: red;
}",
  -1,
  "hover:border-right-color__RED",
  ".hover\\\\:border-right-color__RED:hover {
  border-right-color: red;
}",
  -1,
  "hover:border-bottom-color__RED",
  ".hover\\\\:border-bottom-color__RED:hover {
  border-bottom-color: red;
}",
  -1,
  "hover:border-left-color__RED",
  ".hover\\\\:border-left-color__RED:hover {
  border-left-color: red;
}",
  -1,
]
`;

exports[`INJECT DEVELOPMENT should inject both pseudo selector and breakpoint 1`] = `
Array [
  "hover:tablet:color__RED",
  "@media (max-width: 768px) {.hover\\\\:tablet\\\\:color__RED:hover {
  color: red;
}}",
  2,
]
`;

exports[`INJECT DEVELOPMENT should inject group decorators 1`] = `
Array [
  "groupHover:color__GREEN",
  ".group:hover .groupHover\\\\:color__GREEN {
  color: var(--colors-GREEN);
}:root{--colors-GREEN:green;}
.themes-dark{--colors-GREEN:yellow;}",
  -1,
]
`;

exports[`INJECT DEVELOPMENT should inject multiple 1`] = `
Array [
  "tablet:color__RED",
  "@media (max-width: 768px) {.tablet\\\\:color__RED {
  color: red;
}}",
  2,
  "hover:tablet:color__BLUE",
  "@media (max-width: 768px) {.hover\\\\:tablet\\\\:color__BLUE:hover {
  color: blue;
}}",
  2,
]
`;

exports[`INJECT DEVELOPMENT should inject simple 1`] = `
Array [
  "color__RED",
  ".color__RED {
  color: red;
}",
  -1,
]
`;

exports[`INJECT DEVELOPMENT should inject themes 1`] = `
Array [
  "tablet:color__GREEN",
  "@media (max-width: 768px) {.tablet\\\\:color__GREEN {
  color: var(--colors-GREEN);
}}:root{--colors-GREEN:green;}
.themes-dark{--colors-GREEN:yellow;}",
  2,
]
`;

exports[`INJECT DEVELOPMENT should inject with both pseudo selectors and pseudo elements 1`] = `
Array [
  "before:hover:color__RED",
  ".before\\\\:hover\\\\:color__RED:hover::before {
  color: red;
}",
  -1,
]
`;

exports[`INJECT DEVELOPMENT should inject with breakpoint 1`] = `
Array [
  "tablet:color__RED",
  "@media (max-width: 768px) {.tablet\\\\:color__RED {
  color: red;
}}",
  2,
]
`;

exports[`INJECT DEVELOPMENT should inject with multiple pseudo selectors 1`] = `
Array [
  "firstChild:hover:color__RED",
  ".firstChild\\\\:hover\\\\:color__RED:hover:first-child {
  color: red;
}",
  -1,
]
`;

exports[`INJECT DEVELOPMENT should inject with pseudo element 1`] = `
Array [
  "before:color__RED",
  ".before\\\\:color__RED::before {
  color: red;
}",
  -1,
]
`;

exports[`INJECT DEVELOPMENT should inject with pseudo selector 1`] = `
Array [
  "hover:color__RED",
  ".hover\\\\:color__RED:hover {
  color: red;
}",
  -1,
]
`;
